Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2007
Licence: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.2.xx
DATE xx/xx/200x
9th Alpha Release

NEWS:


NEW: [features/improvements]


OTHER:
-Removed support for Metal style windows on OS X


BUG FIXES:
+Fixed bug where potential infinite loop could happen when doing a replace all
+Fixed bug in handling Enter key in Quick Find bar on Windows
+Fixed graphical bug that occured on osx after maximizing a window when multiple
windows are open.

#-----------------------------------------------------------------------------#


VERSION 0.2.29
DATE 12/01/2007
8th Alpha Release

NEWS:

This release contains a number of important bug fixes and and improvements to
existing features. Most notably is the major improvements that have been made to
the python autocompletion. Editra is now able to provide autocompletion tips for
most situations, including the local scope. It is still not perfect however so 
may not be able to provide tips under certain conditions but it is still a major
enhancement over the previous system.

Editra is also now distributed with wxPython as of version 2.8.7. So if you are
running the source versions, installing wxPython will also install Editra.

NEW: [features/improvements]
+Major improvements to python autocompletion
+Tab completion for command buffer Edit and Change Directory commands
+Style Editor now exports optimized stylesheets
+Automatic perspective mode for saving window state on exit
+Styles are more configurable with custom settings for text selection,
whitespace, and indentation guides now being configurable.
+New Blue color scheme for syntax highlighting can be enabled in preferences
+Russian translation of editor (contributed by Sergei Zivukov)

BUG FIXES:
+Fixed a number of python2.4 compatibility issues
+Fixed bug in styling of code folding margin